# dht11

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_script.sh
arduino/dht11/: dht11.ino
lib/: CMakeLists.txt
lib/inc/: dht11lib.h
lib/src/: dht11_arduino_constants.c  dht11lib.c
lib/test/: test_dht11.c
